@@ -22,8 +22,7 @@ The Initial Developer of the Covered Software is
   <parent>
     <groupId>org.terracotta</groupId>
     <artifactId>terracotta-root</artifactId>
-    <version>4.3.10-SNAPSHOT</version>
-    <relativePath>..</relativePath>
+    <version>4.4.0-SNAPSHOT</version>
   </parent>
 
   <artifactId>build-parent</artifactId>
@@ -42,20 +41,18 @@ The Initial Developer of the Covered Software is
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <core-storage-api.version>1.4</core-storage-api.version>
     <heap-core-storage.version>1.2.1</heap-core-storage.version>
-    <bigmemory-core-storage.version>2.1.1</bigmemory-core-storage.version>
+    <bigmemory-core-storage.version>2.1.3</bigmemory-core-storage.version>
     <search.version>1.5.14</search.version>
-    <management-core.version>2.1.27</management-core.version>
+    <management-core.version>2.1.35-SNAPSHOT</management-core.version>
     <session-management.version>4.3.9</session-management.version>
     <tc-messaging.version>1.1.6</tc-messaging.version>
     <terracotta-license.version>1.2.3</terracotta-license.version>
     <toolkit-api.version>2.10</toolkit-api.version>
     <toolkit-api-internal.version>1.19</toolkit-api-internal.version>
     <!-- version of ehcache embedded inside toolkit -->
-    <ehcache.version>2.10.10-SNAPSHOT</ehcache.version>
+    <ehcache.version>2.11.0-SNAPSHOT</ehcache.version>
     <tcconfig.version>9.6</tcconfig.version>
-    <linked-child-process.version>1.0.17</linked-child-process.version>
-    <groovy-maven-plugin.version>2.1.1</groovy-maven-plugin.version>
-    <groovy.version>2.5.8</groovy.version>
+    <linked-child-process.version>2.0.2</linked-child-process.version>
     <skip.testjar>false</skip.testjar>
     <listName>checkshort.txt</listName>
     <localMavenRepository>${user.home}/.m2/repository</localMavenRepository>
@@ -90,7 +87,9 @@ The Initial Developer of the Covered Software is
       -Dtc.install-root.ignore-checks=true
       -Dcom.sun.management.jmxremote
       ${surefire.additional-jvm-args}
-      ${surefire.additional-jvm-module-args}</surefire.argLine>
+      ${surefire.additional-jvm-module-args}
+      -Djdk.attach.allowAttachSelf
+    </surefire.argLine>
   </properties>
 
   <dependencyManagement>
@@ -176,7 +175,7 @@ The Initial Developer of the Covered Software is
     </dependency>
     <dependency>
       <groupId>org.mockito</groupId>
-      <artifactId>mockito-core</artifactId>
+      <artifactId>mockito-inline</artifactId>
     </dependency>
     <dependency>
       <groupId>org.terracotta</groupId>
@@ -270,11 +269,13 @@ The Initial Developer of the Covered Software is
                 <reportFormat>plain</reportFormat>
                 <includes>
                   <include>**/*Test.java</include>
-                </includes>         
+                </includes>
                 <forkCount>1</forkCount>
                 <reuseForks>false</reuseForks>
                 <forkedProcessTimeoutInSeconds>${tc.tests.info.junit-test-timeout-inseconds}</forkedProcessTimeoutInSeconds>
                 <useSystemClassLoader>true</useSystemClassLoader>
+                <useManifestOnlyJar>true</useManifestOnlyJar>
+                <trimStackTrace>false</trimStackTrace>
                 <workingDirectory>${project.build.directory}/temp</workingDirectory>
                 <devLog>true</devLog>
                 <argLine>${surefire.argLine}</argLine>
@@ -328,7 +329,11 @@ The Initial Developer of the Covered Software is
       <plugin>
         <groupId>org.codehaus.gmaven</groupId>
         <artifactId>groovy-maven-plugin</artifactId>
-      </plugin>      
+      </plugin>
+      <plugin>
+        <groupId>org.terracotta</groupId>
+        <artifactId>maven-forge-plugin</artifactId>
+      </plugin>
     </plugins>
   </build>
 
